# Aerosaur-Firmware

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
src/: CMakeLists.txt  main.c
src/app/: app_event.h  event_bus.c  event_bus.h
src/modules/connectivity/: connectivity.c  connectivity.h
src/modules/fan_controller/: fan_controller.c  fan_controller.h  fan_controller_module.c  fan_controller_module.h
src/modules/input/: input.c  input.h  input_module.c  input_module.h
src/modules/internal/: internal.c  internal.h
src/modules/mqtt/: mqtt_module.c  mqtt_module.h
src/modules/provisioning/: provisioning.c  provisioning.h
src/modules/sensor/: sensors.c
src/modules/sensors/: sensor_module.c  sensor_module.h  sensors.c  sensors.h
src/modules/storage/: storage.c  storage.h  storage_module.c  storage_module.h
src/modules/system_monitor/: system_monitor.c  system_monitor.h
